<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginStart="15dp"
                android:text="@string/welcome"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:layout_marginStart="90dp"
                android:adjustViewBounds="true"
                android:src="@drawable/calculator"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:text="@string/op1"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etxNumber1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:autofillHints=""
                android:hint="@string/number1"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:text="@string/op2"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etxNumber2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:autofillHints=""
                android:hint="@string/number2"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Sumar"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:onClick="onSumarClick"
                    android:text="@string/sumar"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_Restar"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/restar"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_Mult"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/multiplicar"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_Div"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/dividir"
                    android:textSize="16sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvResultLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/result"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>