<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/purple_500">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_baseline_cancel_24" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/error"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/faltan_campos_por_rellenar"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_Ok"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background_whitespace"
            android:text="@string/ok"
            android:textColor="@color/black" />
    </LinearLayout>
</layout>